<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.joget</groupId>
    <artifactId>wflow-consoleweb</artifactId>
    <packaging>war</packaging>
    <version>9.0-SNAPSHOT</version>
    <name>wflow-consoleweb</name>
    <url>http://www.joget.org</url>
    <scm>
        <connection>scm:git:ssh://git@repo.joget.org:2224/joget/jw-community.git</connection>
        <developerConnection>scm:git:ssh://git@repo.joget.org:2224/joget/jw-community.git</developerConnection>
        <url>ssh://git@repo.joget.org:2224/joget/jw-community.git</url>
        <tag>HEAD</tag>
    </scm>
    <dependencies>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.5.0</version>
            <scope>runtime</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.google.protobuf</groupId>
                    <artifactId>protobuf-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.joget</groupId>
            <artifactId>wflow-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.joget</groupId>
            <artifactId>wflow-shark</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <version>3.6.0.Final</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet.jsp</groupId>
            <artifactId>jakarta.servlet.jsp-api</artifactId>
            <version>3.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet.jsp.jstl</groupId>
            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.6.0</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.15</version>
        </dependency>
        <dependency>
            <groupId>org.w3c.jigsaw</groupId>
            <artifactId>jigsaw</artifactId>
            <version>2.2.6</version>
        </dependency>
        <dependency>
            <groupId>javax.cache</groupId>
            <artifactId>cache-api</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>1.9.22</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.websocket</groupId>
            <artifactId>jakarta.websocket-api</artifactId>
            <version>2.1.1</version>
        </dependency> 
    </dependencies>
    <build>
        <finalName>jw</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.ttf</exclude>
                    <exclude>**/*.zip</exclude>
                    <exclude>**/*.png</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/*.ttf</include>
                    <include>**/*.zip</include>
                    <include>**/*.png</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>${project.basedir}/src/test/resources</directory>
            </testResource>
            <testResource>
                <directory>${project.basedir}/src/main/webapp/WEB-INF</directory>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.properties</include>
                </includes>
                <excludes>
                    <exclude>**/web.xml</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <delete dir="${basedir}/src/main/webapp/wro" />
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>ro.isdc.wro4j</groupId>
                <artifactId>wro4j-maven-plugin</artifactId>
                <version>1.8.0</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.mockito</groupId>
                        <artifactId>mockito-core</artifactId>
                        <version>2.18.0</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <minimize>true</minimize>
                    <destinationFolder>${basedir}/src/main/webapp/wro/</destinationFolder>
                    <contextFolder>${basedir}/src/main/webapp/,${basedir}\src\main\webapp\</contextFolder>
                    <wroFile>${basedir}/src/main/resources/wro.xml</wroFile>
                    <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
                    <extraConfigFile>${basedir}/src/main/resources/wro.properties</extraConfigFile>
                    <ignoreMissingResources>false</ignoreMissingResources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                <artifactId>copy-rename-maven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <fileSets>
                                <fileSet>
                                    <sourceFile>target/classes/advtool.properties</sourceFile>
                                    <destinationFile>target/classes/advtool_en.properties</destinationFile>
                                </fileSet>
                                <fileSet>
                                    <sourceFile>target/classes/console.properties</sourceFile>
                                    <destinationFile>target/classes/console_en.properties</destinationFile>
                                </fileSet>  
                                <fileSet>
                                    <sourceFile>target/classes/dbuilder.properties</sourceFile>
                                    <destinationFile>target/classes/dbuilder_en.properties</destinationFile>
                                </fileSet>   
                                <fileSet>
                                    <sourceFile>target/classes/displaytag.properties</sourceFile>
                                    <destinationFile>target/classes/displaytag_en.properties</destinationFile>
                                </fileSet>  
                                <fileSet>
                                    <sourceFile>target/classes/fbuilder.properties</sourceFile>
                                    <destinationFile>target/classes/fbuilder_en.properties</destinationFile>
                                </fileSet>   
                                <fileSet>
                                    <sourceFile>target/classes/help.properties</sourceFile>
                                    <destinationFile>target/classes/help_en.properties</destinationFile>
                                </fileSet>  
                                <fileSet>
                                    <sourceFile>target/classes/pbuilder.properties</sourceFile>
                                    <destinationFile>target/classes/pbuilder_en.properties</destinationFile>
                                </fileSet>  
                                <fileSet>
                                    <sourceFile>target/classes/peditor.properties</sourceFile>
                                    <destinationFile>target/classes/peditor_en.properties</destinationFile>
                                </fileSet>  
                                <fileSet>
                                    <sourceFile>target/classes/plugin.properties</sourceFile>
                                    <destinationFile>target/classes/plugin_en.properties</destinationFile>
                                </fileSet>  
                                <fileSet>
                                    <sourceFile>target/classes/ubuilder.properties</sourceFile>
                                    <destinationFile>target/classes/ubuilder_en.properties</destinationFile>
                                </fileSet>                   
                            </fileSets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>1.1</version>
                <!--
                <configuration>
                    <username>username</username>
                    <password>password</password>
                </configuration>
                -->
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-gitexe</artifactId>
                        <version>1.9.4</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <revisionOnScmFailure>0</revisionOnScmFailure>
                    <shortRevisionLength>7</shortRevisionLength>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.15.0</version>
                <dependencies>
                    <dependency>
                        <groupId>com.sun</groupId>
                        <artifactId>tools</artifactId>
                        <version>${java.version}</version>
                        <scope>system</scope>
                        <systemPath>${project.basedir}/pom.xml</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjrt</artifactId>
                        <version>1.9.22</version>
                    </dependency> 
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>1.9.22</version>
                    </dependency>                         
                </dependencies>                
                <configuration>
                    <complianceLevel>1.8</complianceLevel>
                    <parameters>true</parameters>
                    <weaveDependencies>
                        <weaveDependency>
                            <groupId>org.joget</groupId>
                            <artifactId>wflow-core</artifactId>
                        </weaveDependency>
                    </weaveDependencies>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                    <skipTests>false</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <webResources>
                        <resource>
                            <directory>src/main/resources</directory>
                            <targetPath>/WEB-INF/classes</targetPath>
                            <filtering>true</filtering>
                            <includes>
                                <include>**/*.properties</include>
                            </includes>
                        </resource>
                    </webResources>
                    <archive>
                        <manifestEntries>
                            <Dependencies>org.omg.api</Dependencies>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>            
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>internal</id>
            <url>dav:https://dev.joget.org/archiva/repository/internal/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <url>https://dev.joget.org/archiva/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
